--- a/text-sand/node-server/package.json
+++ b/text-sand/node-server/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "express": "4.x",
+    "express-handlebars": "^1.1.0",
     "express-session": "^1.8.2"
   }
 }
