--- a/text-sand/node-server/package.json
+++ b/text-sand/node-server/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "express": "4.x",
     "express-handlebars": "^1.1.0",
-    "express-session": "^1.8.2"
+    "express-session": "^1.8.2",
+    "body-parser": "^1.9.0"
   }
 }
