--- a/package.json
+++ b/package.json
@@ -3,22 +3,45 @@
   "version": "0.0.0",
   "type": "app",
   "dependencies": {
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "alt": "0.18.4",
     "socket.io-client": "1.3.5",
     "lodash": "4.6.1",
+    "ramda": "^0.24.1",
     "deep-freeze": "0.0.1",
     "nets": "3.2.0",
-    "browserify": "build deps",
     "browserify": "13.0.0",
     "watchify": "3.7.0",
     "react-templatify": "0.3.2",
-    "less": "2.6.1",
+    "less": "2.7.2",
     "fs-extra": "0.26.7",
     "yargs": "4.3.2"
   },
+  "devDependencies": {
+    "chokidar-cli": "^1.2.0",
+    "jshint": "^2.9.5",
+    "jsonlint": "^1.6.2",
+    "blue-tape": "^1.0.0",
+    "tap-spec": "^4.1.1",
+    "proxyquire": "^1.7.9",
+    "jsdom": "^9.0.0",
+    "nock": "^9.1.4",
+    "simple-mock": "^0.7.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0"
+  },
+  "scripts": {
+    "build:js": "browserify core/client/app/room.js --debug --transform ./core/client/react_templatify > build/server_static/client/js/room.js",
+    "build:js:cts": "watchify core/client/app/room.js --debug --transform ./core/client/react_templatify -o build/server_static/client/js/room.js",
+    "build:css": "lessc core/client/styles/room.less build/server_static/client/styles/room.css; lessc core/client/styles/join.less build/server_static/client/styles/join.css",
+    "build:css:cts": "chokidar 'core/client/styles/**/*.less' -c 'npm run build:css' --initial",
+    "build:cts": "npm run build:js:cts & npm run build:css:cts",
+    "build": "npm run build:js && npm run build:css",
+    "test:int": "blue-tape -r ./test/client/rt_install -r ./test/client/dom_install test/client/int/**/*.test.js | tap-spec",
+    "test": "npm run test:int"
+  },
   "engines": {
-    "node": "5.5.0"
+    "node": "8.3.0"
   }
 }
