--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "alt": "0.18.4",
-    "socket.io-client": "1.3.5",
+    "sockjs-client": "1.3.0",
     "lodash": "4.6.1",
     "ramda": "^0.24.1",
     "deep-freeze": "0.0.1",
