--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,6 @@
-eventlet==0.18.4
-Flask==0.10.1
-Flask-SocketIO==2.2
-greenlet==0.4.9
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-python-engineio==0.9.0
-python-socketio==1.2
-redis==2.10.5
-six==1.10.0
-Werkzeug==0.11.5
-pylint==1.7.2
+Flask==1.0.2
+redis==3.1.0
+pylint==2.2.2
+sockjs==0.9.1
+aioredis==1.2.0
+aiohttp-wsgi==0.8.2
